--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ $RECYCLE.BIN/
 
 *.log
 log.txt
+backend/logs/
+logs/
 
 
 /.sourcemaps
@@ -22,26 +24,41 @@ log.txt
 /www
 /platforms
 /plugins
+.capacitor/
+android/
+ios/
 
 # Compiled output
 /dist
 /tmp
 /out-tsc
 /bazel-out
+backend/dist/
+backend/build/
+*.tsbuildinfo
 
 # Node
 /node_modules
 backend/node_modules/
 npm-debug.log
 yarn-error.log
+yarn-debug.log*
+package-lock.json
+yarn.lock
 
 # Sensitive files
 backend/google-credentials.json
 backend/.env
 .env
+.env.local
+.env.*.local
 
-# Exports
+# Exports & Backups
 backend/exports/
+backend/backups/
+backup/
+backups/
+*.sql.gz
 
 # IDEs and editors
 .idea/
@@ -77,3 +94,11 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+desktop.ini
+
+# Docker (opcional)
+# docker-compose.override.yml
+
+# Testing & Coverage
+.nyc_output/
+*.lcov
