--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
+    "googleapis": "^166.0.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "xlsx": "^0.18.5"
   }
 }
